[gd_scene load_steps=9 format=3 uid="uid://rcr1bd5815dc"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_l8skx"]
[ext_resource type="Script" path="res://ui/LineEdit.gd" id="2_uugak"]
[ext_resource type="Script" path="res://CooldownHandler.gd" id="3_nj0kt"]
[ext_resource type="Texture2D" uid="uid://demcppgtewimp" path="res://ui/icons/Icon29.png" id="4_5t6pj"]
[ext_resource type="Script" path="res://ui/EquipmentTimer.gd" id="5_xyv76"]
[ext_resource type="Texture2D" uid="uid://v2odbyoo484o" path="res://ui/icons/Icon38.png" id="6_p544n"]
[ext_resource type="Texture2D" uid="uid://b6xlq88tb3j2a" path="res://ui/icons/Knife00_icon.png" id="7_cl1sc"]
[ext_resource type="Texture2D" uid="uid://b4tn1gh1sd2bm" path="res://ui/icons/Staff00_icon.png" id="8_mcvcs"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_l8skx")
strength_edit = NodePath("DebugPanel/PanelBoxContainer/PlayerStrengthBoxContainer/StrengthLineEdit")
reload_speed_edit = NodePath("DebugPanel/PanelBoxContainer/PlayerReloadSpdContainer/ReloadSpdLineEdit")
melee_strength_edit = NodePath("DebugPanel/PanelBoxContainer/MeleeDmgBoxContainer/LineEdit")
melee_reload_speed_edit = NodePath("DebugPanel/PanelBoxContainer/MeleeReloadSpdContainer/LineEdit")
ranged_strength_edit = NodePath("DebugPanel/PanelBoxContainer/RangedWeaponDmgBoxContainer/LineEdit")
ranged_reload_speed_edit = NodePath("DebugPanel/PanelBoxContainer/RangedReloadSpdContainer/LineEdit")
magic_strength_edit = NodePath("DebugPanel/PanelBoxContainer/StaffStrengthContainer/LineEdit")
magic_reload_speed_edit = NodePath("DebugPanel/PanelBoxContainer/StaffReloadSpdContainer/LineEdit")
consumable_strength_increase_edit = NodePath("DebugPanel/PanelBoxContainer/ConsumableStrBuffContainer/LineEdit")
consumable_reload_speed_edit = NodePath("DebugPanel/PanelBoxContainer/ConsumableReloadSpdContainer/LineEdit")
ranged_timer = NodePath("EqBoxContainer/RangedTextureRect/RangedEqTimer")
consumable_timer = NodePath("EqBoxContainer/PotionTextureRect/PotionTimer")
melee_timer = NodePath("EqBoxContainer/KnifeTextureRect/KnifeTimer")
magic_timer = NodePath("EqBoxContainer/MagicTextureRect/MagicTimer")
consumable_cooldown_label = NodePath("EqBoxContainer/PotionTextureRect/PotionCooldownLabel")
magic_cooldown_label = NodePath("EqBoxContainer/MagicTextureRect/MagicCooldownLabel")
ranged_cooldown_label = NodePath("EqBoxContainer/RangedTextureRect/RangedCooldownLabel")
melee_cooldown_label = NodePath("EqBoxContainer/KnifeTextureRect/KnifeCooldownLabel")

[node name="DebugPanel" type="Panel" parent="."]
offset_right = 247.0
offset_bottom = 503.0

[node name="PanelBoxContainer" type="BoxContainer" parent="DebugPanel"]
layout_mode = 0
offset_right = 248.0
offset_bottom = 377.0
vertical = true

[node name="PlayerStatsLabel" type="Label" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2
text = "Player Stats:"
horizontal_alignment = 1

[node name="PlayerStrengthBoxContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/PlayerStrengthBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "strength"

[node name="StrengthLineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/PlayerStrengthBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_uugak")

[node name="PlayerReloadSpdContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/PlayerReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "reload_spd"

[node name="ReloadSpdLineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/PlayerReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_uugak")

[node name="RangedWeaponStatsLabel" type="Label" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2
text = "Ranged Weapon Stats:"
horizontal_alignment = 1

[node name="RangedWeaponDmgBoxContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/RangedWeaponDmgBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "weapon_dmg"

[node name="LineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/RangedWeaponDmgBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "90"
script = ExtResource("2_uugak")

[node name="RangedReloadSpdContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/RangedReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "reload_spd
"

[node name="LineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/RangedReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "90"
script = ExtResource("2_uugak")

[node name="MeleeWeaponStatsLabel" type="Label" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2
text = "Melee Weapon Stats:"
horizontal_alignment = 1

[node name="MeleeDmgBoxContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/MeleeDmgBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "weapon_dmg
"

[node name="LineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/MeleeDmgBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "90"
script = ExtResource("2_uugak")

[node name="MeleeReloadSpdContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/MeleeReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "reload_spd"

[node name="LineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/MeleeReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "90"
script = ExtResource("2_uugak")

[node name="ConsumableStatsLabel" type="Label" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2
text = "Consumable Stats:"
horizontal_alignment = 1

[node name="ConsumableStrBuffContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/ConsumableStrBuffContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "strength buff"

[node name="LineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/ConsumableStrBuffContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "90"
script = ExtResource("2_uugak")

[node name="ConsumableReloadSpdContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/ConsumableReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "reload_spd
"

[node name="LineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/ConsumableReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "90"
script = ExtResource("2_uugak")

[node name="StaffStatsLabel" type="Label" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2
text = "Staff Stats:"
horizontal_alignment = 1

[node name="StaffStrengthContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/StaffStrengthContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "weapon_dmg
"

[node name="LineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/StaffStrengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "90"
script = ExtResource("2_uugak")

[node name="StaffReloadSpdContainer" type="BoxContainer" parent="DebugPanel/PanelBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/PanelBoxContainer/StaffReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "reload_spd"

[node name="LineEdit" type="LineEdit" parent="DebugPanel/PanelBoxContainer/StaffReloadSpdContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "90"
script = ExtResource("2_uugak")

[node name="EqBoxContainer" type="BoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -136.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
script = ExtResource("3_nj0kt")

[node name="RangedTextureRect" type="TextureRect" parent="EqBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_5t6pj")

[node name="RangedCooldownLabel" type="Label" parent="EqBoxContainer/RangedTextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511
anchor_right = 0.511
offset_left = -15.968
offset_top = -32.0
offset_right = 13.032
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="RangedEqTimer" type="Timer" parent="EqBoxContainer/RangedTextureRect"]
script = ExtResource("5_xyv76")

[node name="PotionTextureRect" type="TextureRect" parent="EqBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_p544n")

[node name="PotionCooldownLabel" type="Label" parent="EqBoxContainer/PotionTextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511
anchor_right = 0.511
offset_left = -15.968
offset_top = -32.0
offset_right = 13.032
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="PotionTimer" type="Timer" parent="EqBoxContainer/PotionTextureRect"]
script = ExtResource("5_xyv76")

[node name="KnifeTextureRect" type="TextureRect" parent="EqBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("7_cl1sc")

[node name="KnifeCooldownLabel" type="Label" parent="EqBoxContainer/KnifeTextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511
anchor_right = 0.511
offset_left = -15.968
offset_top = -32.0
offset_right = 13.032
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="KnifeTimer" type="Timer" parent="EqBoxContainer/KnifeTextureRect"]
script = ExtResource("5_xyv76")

[node name="MagicTextureRect" type="TextureRect" parent="EqBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("8_mcvcs")

[node name="MagicCooldownLabel" type="Label" parent="EqBoxContainer/MagicTextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511
anchor_right = 0.511
offset_left = -15.968
offset_top = -32.0
offset_right = 13.032
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="MagicTimer" type="Timer" parent="EqBoxContainer/MagicTextureRect"]
script = ExtResource("5_xyv76")

[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/PlayerStrengthBoxContainer/StrengthLineEdit" to="DebugPanel/PanelBoxContainer/PlayerStrengthBoxContainer/StrengthLineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/PlayerStrengthBoxContainer/StrengthLineEdit" to="." method="_on_strength_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/PlayerStrengthBoxContainer/StrengthLineEdit" to="DebugPanel/PanelBoxContainer/PlayerStrengthBoxContainer/StrengthLineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/PlayerReloadSpdContainer/ReloadSpdLineEdit" to="DebugPanel/PanelBoxContainer/PlayerReloadSpdContainer/ReloadSpdLineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/PlayerReloadSpdContainer/ReloadSpdLineEdit" to="." method="_on_reloadspd_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/PlayerReloadSpdContainer/ReloadSpdLineEdit" to="DebugPanel/PanelBoxContainer/PlayerReloadSpdContainer/ReloadSpdLineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/RangedWeaponDmgBoxContainer/LineEdit" to="DebugPanel/PanelBoxContainer/RangedWeaponDmgBoxContainer/LineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/RangedWeaponDmgBoxContainer/LineEdit" to="." method="_on_rangedeq_str_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/RangedWeaponDmgBoxContainer/LineEdit" to="DebugPanel/PanelBoxContainer/RangedWeaponDmgBoxContainer/LineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/RangedReloadSpdContainer/LineEdit" to="DebugPanel/PanelBoxContainer/RangedReloadSpdContainer/LineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/RangedReloadSpdContainer/LineEdit" to="." method="_on_rangedeq_reloadspd_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/RangedReloadSpdContainer/LineEdit" to="DebugPanel/PanelBoxContainer/RangedReloadSpdContainer/LineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/MeleeDmgBoxContainer/LineEdit" to="." method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/MeleeDmgBoxContainer/LineEdit" to="." method="_on_meleeeq_str_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/MeleeDmgBoxContainer/LineEdit" to="DebugPanel/PanelBoxContainer/MeleeDmgBoxContainer/LineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/MeleeReloadSpdContainer/LineEdit" to="DebugPanel/PanelBoxContainer/MeleeReloadSpdContainer/LineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/MeleeReloadSpdContainer/LineEdit" to="." method="_on_meleeeq_reloadspd_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/MeleeReloadSpdContainer/LineEdit" to="DebugPanel/PanelBoxContainer/MeleeReloadSpdContainer/LineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/ConsumableStrBuffContainer/LineEdit" to="DebugPanel/PanelBoxContainer/ConsumableStrBuffContainer/LineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/ConsumableStrBuffContainer/LineEdit" to="." method="_on_consumableeq_str_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/ConsumableStrBuffContainer/LineEdit" to="DebugPanel/PanelBoxContainer/ConsumableStrBuffContainer/LineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/ConsumableReloadSpdContainer/LineEdit" to="DebugPanel/PanelBoxContainer/ConsumableReloadSpdContainer/LineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/ConsumableReloadSpdContainer/LineEdit" to="." method="_on_consumableeq_reloadspd_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/ConsumableReloadSpdContainer/LineEdit" to="DebugPanel/PanelBoxContainer/ConsumableReloadSpdContainer/LineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/StaffStrengthContainer/LineEdit" to="DebugPanel/PanelBoxContainer/StaffStrengthContainer/LineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/StaffStrengthContainer/LineEdit" to="." method="_on_magiceq_str_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/StaffStrengthContainer/LineEdit" to="DebugPanel/PanelBoxContainer/StaffStrengthContainer/LineEdit" method="_on_text_submitted"]
[connection signal="text_changed" from="DebugPanel/PanelBoxContainer/StaffReloadSpdContainer/LineEdit" to="DebugPanel/PanelBoxContainer/StaffReloadSpdContainer/LineEdit" method="_on_lineedit_text_changed"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/StaffReloadSpdContainer/LineEdit" to="." method="_on_magiceq_reloadspd_edit_submitted"]
[connection signal="text_submitted" from="DebugPanel/PanelBoxContainer/StaffReloadSpdContainer/LineEdit" to="DebugPanel/PanelBoxContainer/StaffReloadSpdContainer/LineEdit" method="_on_text_submitted"]
[connection signal="countdown_finished" from="EqBoxContainer/RangedTextureRect/RangedEqTimer" to="." method="_on_ranged_eq_timer_countdown_finished"]
[connection signal="timeout" from="EqBoxContainer/RangedTextureRect/RangedEqTimer" to="EqBoxContainer/RangedTextureRect/RangedEqTimer" method="_on_timeout"]
[connection signal="timer_tick" from="EqBoxContainer/RangedTextureRect/RangedEqTimer" to="." method="_on_ranged_eq_timer_timer_tick"]
[connection signal="countdown_finished" from="EqBoxContainer/PotionTextureRect/PotionTimer" to="." method="_on_potion_timer_countdown_finished"]
[connection signal="timeout" from="EqBoxContainer/PotionTextureRect/PotionTimer" to="EqBoxContainer/PotionTextureRect/PotionTimer" method="_on_timeout"]
[connection signal="timer_tick" from="EqBoxContainer/PotionTextureRect/PotionTimer" to="." method="_on_potion_timer_timer_tick"]
[connection signal="countdown_finished" from="EqBoxContainer/KnifeTextureRect/KnifeTimer" to="." method="_on_knife_timer_countdown_finished"]
[connection signal="timeout" from="EqBoxContainer/KnifeTextureRect/KnifeTimer" to="EqBoxContainer/KnifeTextureRect/KnifeTimer" method="_on_timeout"]
[connection signal="timer_tick" from="EqBoxContainer/KnifeTextureRect/KnifeTimer" to="." method="_on_knife_timer_timer_tick"]
[connection signal="countdown_finished" from="EqBoxContainer/MagicTextureRect/MagicTimer" to="." method="_on_magic_timer_countdown_finished"]
[connection signal="timeout" from="EqBoxContainer/MagicTextureRect/MagicTimer" to="EqBoxContainer/MagicTextureRect/MagicTimer" method="_on_timeout"]
[connection signal="timer_tick" from="EqBoxContainer/MagicTextureRect/MagicTimer" to="." method="_on_magic_timer_timer_tick"]
